# SICRO-desktop

./: .gitignore  KNOWN_LIMITATIONS.md  LICENSE  MVP3_DOSSIE_OPERACIONAL_RELATORIO.md  MVP5_CENTRAL_EVIDENCIAS_INTEGRIDADE_RELATORIO.md  MVP6_CROQUI_PERICIAL_RELATORIO.md  MVP7_EDITOR_IMAGEM_PERICIAL_RELATORIO.md  MVP_LAUDO_F12_MEGA_BATCH_RELATORIO.md  MVP_LAUDO_H_GOVBR_RELATORIO.md  README.md  ROAD_ENGINE_2_IMPLEMENTACAO_RELATORIO.md  ROAD_ENGINE_2_REDESIGN_PLAN.md  ROAD_ENGINE_PARITY_H5_REPORT.md  ROAD_ENGINE_PYTHON_PARITY_SPEC.md  ROAD_RENDER_TECH_SPIKE.md  SICRO_LAUDO_HEADER_WORD_STYLE_REPORT.md  SPIKE_A_RELATORIO.md  SPIKE_B_RELATORIO.md  SPIKE_C_RELATORIO.md  SPIKE_D_IMPORTADOR_SICROAPP_RELATORIO.md  SPIKE_E_CROQUI_ENGINE_RELATORIO.md  SPIKE_F_VIDEO_ENGINE_RELATORIO.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/: MANUAL_SICRO.md  README.md  sicro-laudo-auditoria.md
docs/archive/: ALPHA_CHECKLIST.md  ALPHA_GUIA_RAPIDO.md  MVP10_OSM_IMPORT_RELATORIO.md  MVP2_LAUDO_INSTITUCIONAL_RELATORIO.md  MVP4_EVIDENCIAS_NO_LAUDO_RELATORIO.md  MVP8_CONSOLIDACAO_ALPHA_RELATORIO.md  MVP9_CROQUI_AVANCADO_RELATORIO.md  MVP_IMAGEM_G12_MEGA_BATCH_RELATORIO.md  MVP_LAUDO_I_SIGDOCS_RELATORIO.md  README.md  ROAD_ENGINE_1_PYTHON_AUDIT.md  ROAD_ENGINE_PARITY_H1_REPORT.md  ROAD_ENGINE_PARITY_H2_REPORT.md  ROAD_ENGINE_PARITY_H3_REPORT.md
public/branding/: README.md
src/: index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/installer/: RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.0.2.md  make_installer_art.py  termo-de-uso.txt
src-tauri/migrations/: 001_initial.sql  002_laudos.sql  003_exports.sql  004_imports.sql  005_dossie.sql  006_croquis.sql  007_video.sql  008_evidence_links.sql  009_image_analyses.sql  010_video_speed.sql  011_video_distance.sql  012_audio.sql  013_audio_markers.sql  014_audio_enhancements.sql  015_audio_transcript.sql  016_documentoscopia.sql  017_croqui_kind.sql
src-tauri/src/: docanalysis.rs  docforensics.rs  error.rs  lib.rs  main.rs
src-tauri/src/audio/: analysis.rs  mod.rs
src-tauri/src/commands/: ai_commands.rs  alpha_commands.rs  audio_commands.rs  case_index_commands.rs  croqui_commands.rs  documentoscopia_commands.rs  dossie_commands.rs  evidence_commands.rs  export_commands.rs  header_templates_commands.rs  image_commands.rs  import_commands.rs  laudo_commands.rs  laudo_photo_drop.rs  libreoffice_commands.rs  mod.rs  ocr_commands.rs  registry_commands.rs  settings_commands.rs  sigdocs_commands.rs  statistics_commands.rs  video_commands.rs  video_distance_commands.rs  video_speed_commands.rs  workspace_commands.rs
src-tauri/src/database/: connection.rs  migrations.rs
src-tauri/src/database/repositories/: audio_repo.rs  croqui_repo.rs  documentoscopia_repo.rs  dossie_repo.rs  evidence_item_repo.rs  evidence_link_repo.rs  export_repo.rs  image_analysis_repo.rs  import_repo.rs  laudo_repo.rs  media_asset_repo.rs  mod.rs  occurrence_repo.rs  video_distance_repo.rs  video_repo.rs  video_speed_repo.rs
src-tauri/src/exporters/: docx.rs  html.rs  mod.rs  paths.rs  pdf.rs
src-tauri/src/filesystem/: atomic_write.rs  mod.rs  safe_paths.rs  workspace_paths.rs
src-tauri/src/hashing/: mod.rs  sha256.rs
src-tauri/src/image_editor/: exif.rs  hashes.rs  mask.rs  metadata.rs  mod.rs  pipeline.rs  processor.rs  report.rs
src-tauri/src/image_editor/filters/: blur.rs  channels.rs  compare.rs  convolution.rs  decorrelation.rs  edges.rs  enhancement.rs  geometric.rs  histogram.rs  misc.rs  mod.rs  morphology.rs  tone.rs
src-tauri/src/image_processing/: lens_correction.rs  mod.rs
src-tauri/src/importer/: docx_import.rs  dossie_mapper.rs  manifest_parser.rs  mod.rs  orchestrator.rs  package_reader.rs  registry.rs  rehydrator.rs  safe_zip.rs
src-tauri/src/models/: audio.rs  croqui.rs  documentoscopia.rs  dossie.rs  evidence.rs  export.rs  image_analysis.rs  import.rs  laudo.rs  mod.rs  occurrence.rs  registry.rs  video.rs  video_distance.rs  video_speed.rs
src-tauri/src/ocr/: mod.rs
src-tauri/src/registry/: aggregator.rs  broken_links.rs  integrity.rs  mod.rs  report.rs
src-tauri/src/state/: mod.rs
src-tauri/src/video/: frame_export.rs  mod.rs  probe.rs
src-tauri/src/video/measure/: distance.rs  mod.rs  montecarlo.rs
src-tauri/src/video/speed/: crossratio.rs  homography.rs  mod.rs  montecarlo.rs  velocity.rs
src-tauri/src/workspace/: backup.rs  create.rs  global_backup.rs  health.rs  manifest.rs  mod.rs  open.rs  paths.rs  validation.rs
src-tauri/tests/: docx_export.rs  dossie_persistence.rs  sicroapp_importer.rs
src/app/: ActivityRail.module.css  ActivityRail.tsx  App.tsx  AppShell.module.css  AppShell.tsx  Brand.module.css  Brand.tsx  StatusBar.module.css  StatusBar.tsx  TitleBar.module.css  TitleBar.tsx  TopBar.module.css  TopBar.tsx  WorkspaceProvider.tsx  navGuard.test.ts  navGuard.ts
src/components/Button/: Button.module.css  Button.tsx
src/components/Card/: Card.module.css  Card.tsx
src/components/Dialog/: ConfirmDialog.module.css  ConfirmDialog.tsx  Dialog.module.css  Dialog.tsx
src/components/EmptyState/: EmptyState.module.css  EmptyState.tsx
src/components/ModuleLanding/: ModuleLanding.module.css  ModuleLanding.tsx
src/components/NoOccurrenceState/: NoOccurrenceState.module.css  NoOccurrenceState.tsx
src/core/: autoBackup.ts  caseIndex.ts  commands.ts  errors.ts  formatters.ts  keymap.test.ts  keymap.ts  keymapActions.ts  syncedFolder.ts  useShortcuts.ts
src/core/keymap/: audio.ts  (+4 more)
src/design-system/: reset.css  tokens.css  typography.css
src/stores/: documentsStore.ts  imageEditRoundtripStore.ts  keymapStore.ts  settingsStore.ts  sigdocsStore.ts  workspaceStore.ts
src/types/: ai.ts  alpha.ts  app_settings.ts  audio.ts  case_index.ts  croqui.ts  documentoscopia.ts  dossie.ts  evidence.ts  evidence_registry.ts  export.ts  image_analysis.ts  import.ts  laudo.ts  libreoffice.ts  occurrence.ts  ocr.ts  pericia.ts  photo_drop.ts  video.ts  video_distance.ts  video_speed.ts
(+495 files in other folders)
