[package]
name = "sicro-desktop"
version = "2.0.0-alpha.0"
description = "SICRO 2.0 — Sistema Integrado de Criminalística e Operações"
authors = ["SICRO Team"]
edition = "2021"
rust-version = "1.77"

# Library is what tauri-app entry points consume; main.rs only re-exports it.
[lib]
name = "sicro_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `protocol-asset` allows the WebView to fetch files via `convertFileSrc` —
# needed by the Spike D photo gallery to render imported photos without
# round-tripping bytes through `invoke`.
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite — `bundled` makes deployment self-contained (no system libsqlite3 dependency).
rusqlite = { version = "0.31", features = ["bundled"] }

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }

thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cross-platform user/data directories. `directories` is a thin wrapper around
# the XDG/KnownFolders APIs.
directories = "5"

# DOCX export (Spike C). Pure-Rust crate — no system dependencies.
docx-rs = "0.4"

# Spike D — .sicroapp importer.
#   `zip`  reads the ZIP-wrapped pacote (`.sicroapp` is a ZIP renamed).
#   `sha2` powers the streaming SHA-256 used both for the package integrity
#         check (`hashes.json`) and for the per-file content hash recorded
#         in `media_assets`.
zip = { version = "0.6", default-features = false, features = ["deflate"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[features]
# This feature is enabled when building for the Tauri release.
# Production builds bake the WebView assets in.
custom-protocol = ["tauri/custom-protocol"]
