[package]
name = "sicro-desktop"
version = "2.0.2"
description = "SICRO 2.0 — Sistema Integrado de Criminalística e Operações"
authors = ["André Ricardo Barroso"]
edition = "2021"
rust-version = "1.77"
license = "Apache-2.0"

# Library is what tauri-app entry points consume; main.rs only re-exports it.
[lib]
name = "sicro_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `protocol-asset` allows the WebView to fetch files via `convertFileSrc` —
# needed by the Spike D photo gallery to render imported photos without
# round-tripping bytes through `invoke`.
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
# H — gov.br workflow precisa abrir URL externa (assinador.iti.gov.br)
# e colocar o caminho do PDF no clipboard pra o perito colar no upload.
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite — `bundled` makes deployment self-contained (no system libsqlite3 dependency).
rusqlite = { version = "0.31", features = ["bundled"] }

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }

thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cross-platform user/data directories. `directories` is a thin wrapper around
# the XDG/KnownFolders APIs.
directories = "5"

# DOCX export (Spike C). Pure-Rust crate — no system dependencies.
docx-rs = "0.4"

# Spike D — .sicroapp importer.
#   `zip`  reads the ZIP-wrapped pacote (`.sicroapp` is a ZIP renamed).
#   `sha2` powers the streaming SHA-256 used both for the package integrity
#         check (`hashes.json`) and for the per-file content hash recorded
#         in `media_assets`.
zip = { version = "0.6", default-features = false, features = ["deflate"] }
sha2 = "0.10"

# Importação de laudo a partir de .docx (Word) — leitor de OOXML.
#   `roxmltree` é um parser XML read-only, puro-Rust, leve e namespace-aware.
#   Usado para percorrer `word/document.xml` e converter para ProseMirror JSON.
roxmltree = "0.20"

# Spike E — Croqui Engine.
#   `base64` decodes the PNG produced by the frontend (Konva.toDataURL).
base64 = "0.22"

# MVP 8 — Consolidação Alpha.
#   `which` resolve binários no PATH (usado pelo Relatório de Saúde
#   para detectar ffmpeg/ffprobe).
which = "6"

# MVP 7 — Editor de Imagem Pericial.
#   `image` is the canonical pure-Rust raster crate (PNG/JPEG/WebP read+write,
#   pixel ops, conversions). It does NOT add system-library dependencies, so
#   the Tauri bundle stays self-contained.
#   `default-features` are disabled and only the codecs we actually need are
#   re-enabled to keep build time down.
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
    "bmp",
    "tiff",
] }

# G12 (MVP 11) — Image Engine Pro.
#   `kamadak-exif`    — EXIF tag reader (datetime, GPS, camera, ISO, etc.).
#                       Pure-Rust, sem dependências de sistema.
#   `md-5`, `sha1`, `sha3` — Hashes adicionais (MD5 / SHA-1 / SHA-3-256)
#                       para chain of custody pericial além do SHA-256.
kamadak-exif = "0.6"
md-5 = "0.10"
sha1 = "0.10"
sha3 = "0.10"
keyring = { version = "3.6.3", features = ["windows-native", "apple-native", "linux-native-sync-persistent"] }

# Calculador de Velocidade (Fase 1) — matemática pura.
#   `nalgebra`   — álgebra linear (SVD para resolver homografia via DLT).
#   `rand` + `rand_distr` — RNG + Normal pra perturbação Monte Carlo.
nalgebra = "0.33"
rand = "0.8"
rand_distr = "0.4"

# W12 (paridade Audacity) — Análise forense de áudio em Rust PURO (offline,
# determinístico, testável). `hound` lê/escreve WAV PCM (o formato de análise
# que o FFmpeg já produz no módulo). `rustfft` faz a FFT para espectro / ENF.
# Nenhum compila C — bundle continua self-contained. Medição/espectro/ENF são
# ANÁLISE (não alteram o áudio); realce continua via cadeia FFmpeg existente.
hound = "3"
rustfft = "6"

# Fase 2.1 — Gerenciador de IA: baixa o whisper.cpp + modelos sob demanda.
#   `ureq` é um cliente HTTP síncrono leve. Usamos `native-tls` (SChannel no
#   Windows) em vez de rustls para NÃO puxar `ring`/`nasm` — build limpo no
#   Windows só com o MSVC já presente. Usado em `async_runtime::spawn_blocking`.
ureq = { version = "2", default-features = false, features = ["native-tls", "json", "gzip"] }
native-tls = "0.2"

# Export PDF com rodapé "Folha X de Y": dirige o Edge headless pelo DevTools
# Protocol (Page.printToPDF com footerTemplate) via WebSocket local (ws://127…).
# Sem TLS (conexão localhost), então `tungstenite` mínimo. Fallback pro CLI
# `--print-to-pdf` se o CDP falhar — o PDF nunca deixa de ser gerado.
tungstenite = "0.24"

# Documentoscopia — motor de OCR RapidOCR/PaddleOCR (PP-OCRv5) via ONNX.
#   `oar-ocr` embrulha detecção + reconhecimento do PaddleOCR rodando sobre o
#   ONNX Runtime (crate `ort`). Offline, SEM Python; o `ort` baixa e empacota a
#   `onnxruntime.dll` no build. Apache-2.0. Os modelos (pacote latino: cobre
#   PT/ES/EN/FR/IT/DE…) são resolvidos à parte (download/empacote).
oar-ocr = "0.6"

# Documentoscopia Fase 3 — detecção de QR e códigos de barras.
#   `rxing` é o port Rust puro do ZXing (Apache-2.0): decodifica QR, Code128,
#   EAN, etc. a partir de bytes de luminância. Determinístico e offline — usado
#   para localizar e LER os códigos do documento (ex.: a chave da NF-e no QR e
#   no código de barras do DANFE).
rxing = "0.7"
lopdf = "0.36.0"

[dev-dependencies]
tempfile = "3"

[features]
# This feature is enabled when building for the Tauri release.
# Production builds bake the WebView assets in.
custom-protocol = ["tauri/custom-protocol"]
